= Release notes v.8.5

== Table of Contents

* Fixed pagination for getting consents by account id

== Fixed pagination for getting consents by account id

From now on, pagination on `GET aspsp-api/v1/ais/consents/account/{account-id}` works correctly
with expected items on page.